# hotel-bookings

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  conftest.py  db.py  docker-compose.yaml  main.py  pyproject.toml  test_api.py
src/: booking_router.py  main.py
src/api/: booking_router.py  routers.py
src/core/: config.py
src/infrastructure/: __init__.py  database.py
src/infrastructure/bookings/: models.py
src/infrastructure/hotels/: models.py
src/infrastructure/rooms/: models.py
src/infrastructure/users/: models.py
src/migrations/: env.py
src/migrations/versions/: 4da6f8ea1dad_.py  ed8844dc02c9_initial_migration.py
tests/: conftest.py  test_api.py
